bb-27: updated book to have relevant links.